crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__custom_dummy_var_regexp_preset__RUF052_RUF052.py_1.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF052.py:88:9: RUF052 [*] Local dummy variable `_var` is accessed
   |
86 | class Class_:
87 |     def fun(self):
88 |         _var = "method variable" # [RUF052]
   |         ^^^^ RUF052
89 |         return _var
   |
   = help: Remove leading underscores

ℹ Unsafe fix
85 85 | 
86 86 | class Class_:
87 87 |     def fun(self):
88    |-        _var = "method variable" # [RUF052]
89    |-        return _var
   88 |+        var = "method variable" # [RUF052]
   89 |+        return var
90 90 | 
91 91 | def fun(_var): # parameters are ignored
92 92 |     return _var

RUF052.py:95:5: RUF052 [*] Local dummy variable `_list` is accessed
   |
94 | def fun():
95 |     _list = "built-in" # [RUF052]
   |     ^^^^^ RUF052
96 |     return _list
   |
   = help: Prefer using trailing underscores to avoid shadowing a built-in

ℹ Unsafe fix
92 92 |     return _var
93 93 | 
94 94 | def fun():
95    |-    _list = "built-in" # [RUF052]
96    |-    return _list
   95 |+    list_ = "built-in" # [RUF052]
   96 |+    return list_
97 97 | 
98 98 | x = "global"
99 99 | 

RUF052.py:102:5: RUF052 [*] Local dummy variable `_x` is accessed
    |
100 | def fun():
101 |     global x
102 |     _x = "shadows global" # [RUF052]
    |     ^^ RUF052
103 |     return _x
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

ℹ Unsafe fix
99  99  | 
100 100 | def fun():
101 101 |     global x
102     |-    _x = "shadows global" # [RUF052]
103     |-    return _x
    102 |+    x_ = "shadows global" # [RUF052]
    103 |+    return x_
104 104 | 
105 105 | def foo():
106 106 |   x = "outer"

RUF052.py:109:5: RUF052 [*] Local dummy variable `_x` is accessed
    |
107 |   def bar():
108 |     nonlocal x
109 |     _x = "shadows nonlocal" # [RUF052]
    |     ^^ RUF052
110 |     return _x
111 |   bar()
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

ℹ Unsafe fix
106 106 |   x = "outer"
107 107 |   def bar():
108 108 |     nonlocal x
109     |-    _x = "shadows nonlocal" # [RUF052]
110     |-    return _x
    109 |+    x_ = "shadows nonlocal" # [RUF052]
    110 |+    return x_
111 111 |   bar()
112 112 |   return x
113 113 | 

RUF052.py:116:5: RUF052 [*] Local dummy variable `_x` is accessed
    |
114 | def fun():
115 |     x = "local"
116 |     _x = "shadows local" # [RUF052]
    |     ^^ RUF052
117 |     return _x
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

ℹ Unsafe fix
113 113 | 
114 114 | def fun():
115 115 |     x = "local"
116     |-    _x = "shadows local" # [RUF052]
117     |-    return _x
    116 |+    x_ = "shadows local" # [RUF052]
    117 |+    return x_
118 118 | 
119 119 | 
120 120 | GLOBAL_1 = "global 1"

RUF052.py:124:5: RUF052 Local dummy variable `_GLOBAL_1` is accessed
    |
123 | def unfixables():
124 |     _GLOBAL_1 = "foo"
    |     ^^^^^^^^^ RUF052
125 |     # unfixable because the rename would shadow a global variable
126 |     print(_GLOBAL_1)  # [RUF052]
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:132:5: RUF052 Local dummy variable `_local` is accessed
    |
131 |     # unfixable because the rename would shadow a local variable
132 |     _local = "local3"  # [RUF052]
    |     ^^^^^^ RUF052
133 |     print(_local)
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:136:9: RUF052 Local dummy variable `_GLOBAL_1` is accessed
    |
135 |     def nested():
136 |         _GLOBAL_1 = "foo"
    |         ^^^^^^^^^ RUF052
137 |         # unfixable because the rename would shadow a global variable
138 |         print(_GLOBAL_1)  # [RUF052]
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:141:9: RUF052 Local dummy variable `_local` is accessed
    |
140 |         # unfixable because the rename would shadow a variable from the outer function
141 |         _local = "local4"
    |         ^^^^^^ RUF052
142 |         print(_local)
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:149:5: RUF052 [*] Local dummy variable `_P` is accessed
    |
147 |     from collections import namedtuple
148 | 
149 |     _P = ParamSpec("_P")
    |     ^^ RUF052
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
    |
    = help: Remove leading underscores

ℹ Unsafe fix
146 146 |     from enum import Enum
147 147 |     from collections import namedtuple
148 148 | 
149     |-    _P = ParamSpec("_P")
    149 |+    P = ParamSpec("P")
150 150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 152 |     _E = Enum("_E", ["a", "b", "c"])
--------------------------------------------------------------------------------
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:150:5: RUF052 [*] Local dummy variable `_T` is accessed
    |
149 |     _P = ParamSpec("_P")
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
    |     ^^ RUF052
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
    |
    = help: Remove leading underscores

ℹ Unsafe fix
147 147 |     from collections import namedtuple
148 148 | 
149 149 |     _P = ParamSpec("_P")
150     |-    _T = TypeVar(name="_T", covariant=True, bound=int|str)
    150 |+    T = TypeVar(name="T", covariant=True, bound=int|str)
151 151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 152 |     _E = Enum("_E", ["a", "b", "c"])
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
--------------------------------------------------------------------------------
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:151:5: RUF052 [*] Local dummy variable `_NT` is accessed
    |
149 |     _P = ParamSpec("_P")
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
    |     ^^^ RUF052
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    |
    = help: Remove leading underscores

ℹ Unsafe fix
148 148 | 
149 149 |     _P = ParamSpec("_P")
150 150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151     |-    _NT = NamedTuple("_NT", [("foo", int)])
    151 |+    NT = NamedTuple("NT", [("foo", int)])
152 152 |     _E = Enum("_E", ["a", "b", "c"])
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:152:5: RUF052 [*] Local dummy variable `_E` is accessed
    |
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
    |     ^^ RUF052
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    |
    = help: Remove leading underscores

ℹ Unsafe fix
149 149 |     _P = ParamSpec("_P")
150 150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 151 |     _NT = NamedTuple("_NT", [("foo", int)])
152     |-    _E = Enum("_E", ["a", "b", "c"])
    152 |+    E = Enum("E", ["a", "b", "c"])
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, _NT, E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:153:5: RUF052 [*] Local dummy variable `_NT2` is accessed
    |
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    |     ^^^^ RUF052
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
    |
    = help: Remove leading underscores

ℹ Unsafe fix
150 150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 152 |     _E = Enum("_E", ["a", "b", "c"])
153     |-    _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    153 |+    NT2 = namedtuple("NT2", ['x', 'y', 'z'])
154 154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, _NT, _E, NT2, _NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:154:5: RUF052 [*] Local dummy variable `_NT3` is accessed
    |
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    |     ^^^^ RUF052
155 |     _DynamicClass = type("_DynamicClass", (), {})
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |
    = help: Remove leading underscores

ℹ Unsafe fix
151 151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 152 |     _E = Enum("_E", ["a", "b", "c"])
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154     |-    _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    154 |+    NT3 = namedtuple(typename="NT3", field_names=['x', 'y', 'z'])
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, _NT, _E, _NT2, NT3, _DynamicClass, _NotADynamicClass)

RUF052.py:155:5: RUF052 [*] Local dummy variable `_DynamicClass` is accessed
    |
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
    |     ^^^^^^^^^^^^^ RUF052
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |
    = help: Remove leading underscores

ℹ Unsafe fix
152 152 |     _E = Enum("_E", ["a", "b", "c"])
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155     |-    _DynamicClass = type("_DynamicClass", (), {})
    155 |+    DynamicClass = type("DynamicClass", (), {})
156 156 |     _NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, _NT, _E, _NT2, _NT3, DynamicClass, _NotADynamicClass)

RUF052.py:156:5: RUF052 [*] Local dummy variable `_NotADynamicClass` is accessed
    |
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |     ^^^^^^^^^^^^^^^^^ RUF052
157 | 
158 |     print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    |
    = help: Remove leading underscores

ℹ Unsafe fix
153 153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 155 |     _DynamicClass = type("_DynamicClass", (), {})
156     |-    _NotADynamicClass = type("_NotADynamicClass")
    156 |+    NotADynamicClass = type("_NotADynamicClass")
157 157 | 
158     |-    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    158 |+    print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, NotADynamicClass)
