crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__custom_dummy_var_regexp_preset__RUF052_RUF052.py_2.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
snapshot_kind: text
---
RUF052.py:88:9: RUF052 Local dummy variable `_var` is accessed
   |
86 | class Class_:
87 |     def fun(self):
88 |         _var = "method variable" # [RUF052]
   |         ^^^^ RUF052
89 |         return _var
   |
   = help: Remove leading underscores

RUF052.py:95:5: RUF052 Local dummy variable `_list` is accessed
   |
94 | def fun():
95 |     _list = "built-in" # [RUF052]
   |     ^^^^^ RUF052
96 |     return _list
   |
   = help: Prefer using trailing underscores to avoid shadowing a built-in

RUF052.py:102:5: RUF052 Local dummy variable `_x` is accessed
    |
100 | def fun():
101 |     global x
102 |     _x = "shadows global" # [RUF052]
    |     ^^ RUF052
103 |     return _x
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:106:3: RUF052 Local dummy variable `x` is accessed
    |
105 | def foo():
106 |   x = "outer"
    |   ^ RUF052
107 |   def bar():
108 |     nonlocal x
    |

RUF052.py:109:5: RUF052 Local dummy variable `_x` is accessed
    |
107 |   def bar():
108 |     nonlocal x
109 |     _x = "shadows nonlocal" # [RUF052]
    |     ^^ RUF052
110 |     return _x
111 |   bar()
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:116:5: RUF052 Local dummy variable `_x` is accessed
    |
114 | def fun():
115 |     x = "local"
116 |     _x = "shadows local" # [RUF052]
    |     ^^ RUF052
117 |     return _x
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:124:5: RUF052 Local dummy variable `_GLOBAL_1` is accessed
    |
123 | def unfixables():
124 |     _GLOBAL_1 = "foo"
    |     ^^^^^^^^^ RUF052
125 |     # unfixable because the rename would shadow a global variable
126 |     print(_GLOBAL_1)  # [RUF052]
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:132:5: RUF052 Local dummy variable `_local` is accessed
    |
131 |     # unfixable because the rename would shadow a local variable
132 |     _local = "local3"  # [RUF052]
    |     ^^^^^^ RUF052
133 |     print(_local)
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:136:9: RUF052 Local dummy variable `_GLOBAL_1` is accessed
    |
135 |     def nested():
136 |         _GLOBAL_1 = "foo"
    |         ^^^^^^^^^ RUF052
137 |         # unfixable because the rename would shadow a global variable
138 |         print(_GLOBAL_1)  # [RUF052]
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:141:9: RUF052 Local dummy variable `_local` is accessed
    |
140 |         # unfixable because the rename would shadow a variable from the outer function
141 |         _local = "local4"
    |         ^^^^^^ RUF052
142 |         print(_local)
    |
    = help: Prefer using trailing underscores to avoid shadowing a variable

RUF052.py:149:5: RUF052 Local dummy variable `_P` is accessed
    |
147 |     from collections import namedtuple
148 | 
149 |     _P = ParamSpec("_P")
    |     ^^ RUF052
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
    |
    = help: Remove leading underscores

RUF052.py:150:5: RUF052 Local dummy variable `_T` is accessed
    |
149 |     _P = ParamSpec("_P")
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
    |     ^^ RUF052
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
    |
    = help: Remove leading underscores

RUF052.py:151:5: RUF052 Local dummy variable `_NT` is accessed
    |
149 |     _P = ParamSpec("_P")
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
    |     ^^^ RUF052
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    |
    = help: Remove leading underscores

RUF052.py:152:5: RUF052 Local dummy variable `_E` is accessed
    |
150 |     _T = TypeVar(name="_T", covariant=True, bound=int|str)
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
    |     ^^ RUF052
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    |
    = help: Remove leading underscores

RUF052.py:153:5: RUF052 Local dummy variable `_NT2` is accessed
    |
151 |     _NT = NamedTuple("_NT", [("foo", int)])
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
    |     ^^^^ RUF052
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
    |
    = help: Remove leading underscores

RUF052.py:154:5: RUF052 Local dummy variable `_NT3` is accessed
    |
152 |     _E = Enum("_E", ["a", "b", "c"])
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
    |     ^^^^ RUF052
155 |     _DynamicClass = type("_DynamicClass", (), {})
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |
    = help: Remove leading underscores

RUF052.py:155:5: RUF052 Local dummy variable `_DynamicClass` is accessed
    |
153 |     _NT2 = namedtuple("_NT2", ['x', 'y', 'z'])
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
    |     ^^^^^^^^^^^^^ RUF052
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |
    = help: Remove leading underscores

RUF052.py:156:5: RUF052 Local dummy variable `_NotADynamicClass` is accessed
    |
154 |     _NT3 = namedtuple(typename="_NT3", field_names=['x', 'y', 'z'])
155 |     _DynamicClass = type("_DynamicClass", (), {})
156 |     _NotADynamicClass = type("_NotADynamicClass")
    |     ^^^^^^^^^^^^^^^^^ RUF052
157 | 
158 |     print(_T, _P, _NT, _E, _NT2, _NT3, _DynamicClass, _NotADynamicClass)
    |
    = help: Remove leading underscores
